--- a/sam/package.json
+++ b/sam/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "body-parser": "^1.14.2",
+    "chai": "^3.4.1",
+    "chai-http": "^1.0.0",
     "express": "^4.13.4",
+    "mocha": "^2.3.4",
     "mongoose": "^4.3.6"
   }
 }
