--- a/LoganTegman/package.json
+++ b/LoganTegman/package.json
@@ -8,12 +8,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "chai": "^3.4.1",
     "chai-http": "^1.0.0",
     "eslint": "^1.10.3",
-    "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.1.1",
     "gulp-mocha": "^2.2.0",
@@ -21,6 +20,7 @@
   },
   "dependencies": {
     "body-parser": "^1.14.2",
+    "express": "^4.13.3",
     "mongoose": "^4.3.6"
   }
 }
