--- a/kennysuh/package.json
+++ b/kennysuh/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular with 2 resource app",
+  "name": "angular-two-resource",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
